<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="real_estate_item_image_description">real estate photo</string>
    <string name="real_estate_update_button_add_sale_date">Add sale date</string>
    <string name="real_estate_update_button_edit_sale_date">Edit sale date</string>
    <string name="real_estate_update_tv_information_available">Real estate status: Available</string>
    <string name="real_estate_update_tv_information_sold">sold on : </string>
    <string name="real_estate_update_fragment_button_update">Update real estate</string>
    <string name="real_estate_list_adapter_description">%1s - %2dm² - room: %3d</string>
    <string name="real_estate_list_adapter_price">%1d$</string>
    <string name="real_estate_list_place">%1d %2s %3s</string>
    <string name="photo_description_item_edit_item">edit image</string>
    <string name="all_title_information">Information</string>
    <string name="all_price">Price</string>
    <string name="all_room">Room</string>
    <string name="all_size">Size</string>
    <string name="all_description">Description</string>
    <string name="all_title_address">Address</string>
    <string name="all_street_number">Street number</string>
    <string name="all_street_name">Street name</string>
    <string name="all_postal_code">Postal code</string>
    <string name="all_city">City</string>
    <string name="all_type">Type</string>
    <string name="all_country">Country</string>
    <string name="all_add_picture">Add picture</string>
    <string name="all_add_real_estate">Add real estate</string>
    <string name="all_real_estate_agent">Real estate agent</string>
    <string name="all_edit_sale_date">Edit sale date</string>
    <string name="all_nearby_interest">Nearby interest</string>
    <string name="all_required_field">required field</string>
    <string name="all_ok">OK</string>
    <string name="all_delete">Delete</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_remove">Remove</string>
    <string name="all_photo_description">Photo description</string>
    <string name="filter_city_name">City name</string>
    <string name="filter_price">Price :</string>
    <string name="filter_size">Size :</string>
    <string name="filter_photo">Photo :</string>
    <string name="filter_near_by_interest">Near by interest</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_sw600dp_price">Price</string>
    <string name="filter_sw600dp_size">Size</string>
    <string name="filter_sw600dp_photo">Photo</string>
    <string name="filter_most_max_price">+ %1s</string>
    <string name="filter_most_max_size">+ %1dm</string>
    <string name="filter_max_size">%1dm</string>
    <string name="filter_most_max_photo">+ %1d</string>
    <string name="filter_add_min_entry_date">Add min entry date</string>
    <string name="filter_edit_min_entry_date">Edit min entry date</string>
    <string name="filter_add_max_entry_date">Add max entry date</string>
    <string name="filter_edit_max_entry_date">Edit max entry date</string>
    <string name="filter_add_min_sale_date">Add min sale date</string>
    <string name="filter_edit_min_sale_date">Edit min sale date</string>
    <string name="filter_add_max_sale_date">Add max sale date</string>
    <string name="filter_edit_max_sale_date">Edit max sale date</string>
    <string name="real_estate_list_button_list">List</string>
    <string name="real_estate_list_button_map">Map</string>
    <string name="real_estate_notification_channel_name">Real estate channel</string>
    <string name="real_estate_notification_channel_description">real estate channel information</string>
    <string name="real_estate_notification_title">Real estate manager : </string>
</resources>
